<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arsh"
    tools:context=".tutorMenu">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:foregroundGravity="center"
        android:rowCount="2"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="32dp">

        <android.support.design.card.MaterialCardView
            android:id="@+id/create_course"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="16dp"
            android:elevation="@dimen/fab_margin"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/cardviewbackground"
                    android:padding="@dimen/fab_margin"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/create_course" />

            </LinearLayout>
        </android.support.design.card.MaterialCardView>


        <android.support.design.card.MaterialCardView
            android:id="@+id/view_courses"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="16dp"
            android:elevation="@dimen/fab_margin"
            android:padding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/cardviewbackground"
                    android:padding="@dimen/fab_margin"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/view_courses" />

            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="16dp"
            android:elevation="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/cardviewbackground"
                    android:padding="@dimen/fab_margin"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/reg_course" />

            </LinearLayout>
        </android.support.design.card.MaterialCardView>


        <android.support.design.card.MaterialCardView
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="16dp"
            android:elevation="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/cardviewbackground"
                    android:padding="@dimen/fab_margin"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/reg_course" />

            </LinearLayout>
        </android.support.design.card.MaterialCardView>


    </GridLayout>


</LinearLayout>